--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,8 @@
 	path = judge-server/repo
 	url = https://github.com/jakubpeleska/qqh-judge-server
 	branch = master
+
+[submodule "dmoj/problems"]
+	path = dmoj/problems
+	url = https://github.com/jakubpeleska/qqh-problems
+	branch = main
