Update runtime env, add logs, ignore sandbox and logs directories

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 dmoj/database
 
 *.env
+
+judge-server/logs/*
+!judge-server/logs/.gitkeep 
+
+judge-server/sandbox/*
+!judge-server/sandbox/.gitkeep
