--- a/judge-server/docker-compose.yml
+++ b/judge-server/docker-compose.yml
@@ -28,6 +28,7 @@ services:
     volumes:
       - ../dmoj/problems/:/problems/
       - ./sandbox/:/sandbox
+      - ./logs/:/logs
       - /var/run/docker.sock:/var/run/docker.sock
     networks: [db, bridged]
 networks:
