--- a/judge-server/judge/runtime/Dockerfile
+++ b/judge-server/judge/runtime/Dockerfile
@@ -1,5 +1,4 @@
 FROM continuumio/miniconda3
 COPY runtime.yml /runtime.yml
-RUN conda env create -f /runtime.yml
+RUN conda env update --file /runtime.yml
 
-CMD ["conda", "run", "-n", "runtime", "/bin/bash", "-c"]
