Run judge server as root and add runtime user

--- a/judge-server/judge/runtime/Dockerfile
+++ b/judge-server/judge/runtime/Dockerfile
@@ -2,3 +2,7 @@ FROM continuumio/miniconda3
 COPY runtime.yml /runtime.yml
 RUN conda env update --file /runtime.yml
 
+RUN useradd -M runtime
+
+USER runtime
+
