--- a/judge-server/judge/judge-env.yml
+++ b/judge-server/judge/judge-env.yml
@@ -1,6 +1,5 @@
 name: judge
 channels:
-  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
@@ -9,8 +8,6 @@ dependencies:
   - bottleneck=1.3.7=py312ha883a20_0
   - bzip2=1.0.8=h5eee18b_6
   - ca-certificates=2024.9.24=h06a4308_0
-  - cffi=1.17.1=py312h1fdaa30_0
-  - cryptography=43.0.0=py312hdda0065_0
   - expat=2.6.3=h6a678d5_0
   - greenlet=3.0.1=py312h6a678d5_0
   - intel-openmp=2023.1.0=hdb19cb5_46306
@@ -31,9 +28,7 @@ dependencies:
   - openssl=3.0.15=h5eee18b_0
   - pandas=2.2.2=py312h526ad5a_0
   - pip=24.2=py312h06a4308_0
-  - pycparser=2.21=pyhd3eb1b0_0
-  - pymysql=1.0.2=py312h06a4308_1
-  - python=3.12.6=h5148396_1
+  - python=3.12.7=h5148396_0
   - python-dateutil=2.9.0post0=py312h06a4308_2
   - python-tzdata=2023.3=pyhd3eb1b0_0
   - pytz=2024.1=py312h06a4308_0
@@ -46,8 +41,10 @@ dependencies:
   - tk=8.6.14=h39e8969_0
   - typing-extensions=4.11.0=py312h06a4308_0
   - typing_extensions=4.11.0=py312h06a4308_0
-  - tzdata=2024a=h04d1e81_0
+  - tzdata=2024b=h04d1e81_0
   - wheel=0.44.0=py312h06a4308_0
   - xz=5.4.6=h5eee18b_1
   - zlib=1.2.13=h5eee18b_1
+  - pip:
+      - mysql-connector-python==9.0.0
 prefix: /usr/lib/miniconda/envs/judge
