--- a/judge-server/docker-compose.yml
+++ b/judge-server/docker-compose.yml
@@ -1,9 +1,10 @@
 version: '3.7'
 services:
   db:
-    container_name: judge_mysql
     image: mariadb:10.6
     restart: always
+    ports:
+      - 3306:3306
     volumes:
       - ./mariadb/init:/docker-entrypoint-initdb.d
       - ./mariadb/data:/var/lib/mysql
