--- a/qqh-dev.yml
+++ b/qqh-dev.yml
@@ -4,13 +4,15 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
-  - asgiref=3.8.1=py311h06a4308_0
+  - asgiref=3.8.1=py312h06a4308_0
   - blas=1.0=mkl
-  - bottleneck=1.3.7=py311hf4808d0_0
+  - bottleneck=1.3.7=py312ha883a20_0
   - bzip2=1.0.8=h5eee18b_6
   - ca-certificates=2024.9.24=h06a4308_0
-  - django=5.1=py311h06a4308_0
-  - greenlet=3.0.1=py311h6a678d5_0
+  - cython=3.0.11=py312h5eee18b_0
+  - django=5.1=py312h06a4308_0
+  - expat=2.6.3=h6a678d5_0
+  - greenlet=3.0.1=py312h6a678d5_0
   - intel-openmp=2023.1.0=hdb19cb5_46306
   - ld_impl_linux-64=2.40=h12ee557_0
   - libffi=3.4.4=h6a678d5_1
@@ -19,32 +21,32 @@ dependencies:
   - libstdcxx-ng=11.2.0=h1234567_1
   - libuuid=1.41.5=h5eee18b_0
   - mkl=2023.1.0=h213fc3f_46344
-  - mkl-service=2.4.0=py311h5eee18b_1
-  - mkl_fft=1.3.10=py311h5eee18b_0
-  - mkl_random=1.2.7=py311ha02d727_0
+  - mkl-service=2.4.0=py312h5eee18b_1
+  - mkl_fft=1.3.10=py312h5eee18b_0
+  - mkl_random=1.2.7=py312h526ad5a_0
   - ncurses=6.4=h6a678d5_0
-  - numexpr=2.8.7=py311h65dcdc2_0
-  - numpy=1.26.4=py311h08b1b3b_0
-  - numpy-base=1.26.4=py311hf175353_0
+  - numexpr=2.8.7=py312hf827012_0
+  - numpy=1.26.4=py312hc5e2394_0
+  - numpy-base=1.26.4=py312h0da6c21_0
   - openssl=3.0.15=h5eee18b_0
-  - pandas=2.2.2=py311ha02d727_0
-  - pip=24.2=py311h06a4308_0
-  - python=3.11.10=he870216_0
-  - python-dateutil=2.9.0post0=py311h06a4308_2
+  - pandas=2.2.2=py312h526ad5a_0
+  - pip=24.2=py312h06a4308_0
+  - python=3.12.7=h5148396_0
+  - python-dateutil=2.9.0post0=py312h06a4308_2
   - python-tzdata=2023.3=pyhd3eb1b0_0
-  - pytz=2024.1=py311h06a4308_0
+  - pytz=2024.1=py312h06a4308_0
   - readline=8.2=h5eee18b_0
-  - setuptools=75.1.0=py311h06a4308_0
+  - setuptools=75.1.0=py312h06a4308_0
   - six=1.16.0=pyhd3eb1b0_1
-  - sqlalchemy=2.0.34=py311h00e1ef3_0
+  - sqlalchemy=2.0.34=py312h00e1ef3_0
   - sqlite=3.45.3=h5eee18b_0
-  - sqlparse=0.4.4=py311h06a4308_0
+  - sqlparse=0.4.4=py312h06a4308_0
   - tbb=2021.8.0=hdb19cb5_0
   - tk=8.6.14=h39e8969_0
-  - typing-extensions=4.11.0=py311h06a4308_0
-  - typing_extensions=4.11.0=py311h06a4308_0
+  - typing-extensions=4.11.0=py312h06a4308_0
+  - typing_extensions=4.11.0=py312h06a4308_0
   - tzdata=2024a=h04d1e81_0
-  - wheel=0.44.0=py311h06a4308_0
+  - wheel=0.44.0=py312h06a4308_0
   - xz=5.4.6=h5eee18b_1
   - zlib=1.2.13=h5eee18b_1
 prefix: /home/jakub/miniconda3/envs/qqh-dev
