Update runtime env

--- a/judge-server/judge/runtime/Dockerfile
+++ b/judge-server/judge/runtime/Dockerfile
@@ -1,4 +1,4 @@
-FROM continuumio/miniconda3
+FROM continuumio/miniconda3:24.7.1-0
 COPY runtime.yml /runtime.yml
 RUN conda env update --file /runtime.yml
 
