--- a/judge-server/judge/runtime/runtime.yml
+++ b/judge-server/judge/runtime/runtime.yml
@@ -1,5 +1,6 @@
 name: base
 channels:
+  - pyg
   - pytorch
   - conda-forge
   - defaults
@@ -7,15 +8,19 @@ dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
   - _py-xgboost-mutex=2.0=cpu_0
+  - aiohappyeyeballs=2.4.0=py312h06a4308_0
+  - aiohttp=3.10.5=py312h5eee18b_0
+  - aiosignal=1.2.0=pyhd3eb1b0_0
   - archspec=0.2.3=pyhd8ed1ab_0
+  - attrs=24.2.0=py312h06a4308_0
   - blas=1.0=mkl
   - boltons=24.0.0=pyhd8ed1ab_0
   - bottleneck=1.3.7=py312ha883a20_0
   - brotli-python=1.0.9=py312h6a678d5_8
   - bzip2=1.0.8=h4bc722e_7
   - c-ares=1.33.1=heb4867d_0
-  - ca-certificates=2024.8.30=hbcca054_0
-  - certifi=2024.8.30=pyhd8ed1ab_0
+  - ca-certificates=2024.9.24=h06a4308_0
+  - certifi=2024.8.30=py312h06a4308_0
   - cffi=1.16.0=py312h5eee18b_1
   - charset-normalizer=3.3.2=pyhd8ed1ab_0
   - colorama=0.4.6=pyhd8ed1ab_0
@@ -31,6 +36,8 @@ dependencies:
   - fmt=9.1.0=h924138e_0
   - freetype=2.10.4=h0708190_1
   - frozendict=2.4.2=py312h06a4308_0
+  - frozenlist=1.4.0=py312h5eee18b_0
+  - fsspec=2024.6.1=py312h06a4308_0
   - gettext=0.22.5=he02047a_3
   - gettext-tools=0.22.5=he02047a_3
   - gmp=6.3.0=hac33072_2
@@ -100,6 +107,7 @@ dependencies:
   - mkl_fft=1.3.10=py312h5eee18b_0
   - mkl_random=1.2.7=py312h526ad5a_0
   - mpmath=1.3.0=pyhd8ed1ab_0
+  - multidict=6.0.4=py312h5eee18b_0
   - ncurses=6.5=he02047a_1
   - nettle=3.7.3=hbbd107a_1
   - networkx=3.3=pyhd8ed1ab_1
@@ -117,11 +125,14 @@ dependencies:
   - pip=24.2=pyh8b19718_1
   - platformdirs=4.3.2=pyhd8ed1ab_0
   - pluggy=1.5.0=pyhd8ed1ab_0
+  - psutil=5.9.0=py312h5eee18b_0
   - py-xgboost=2.1.1=cpu_pyh995e691_1
   - py-xgboost-cpu=2.1.1=pyhb8f9a19_1
   - pybind11-abi=4=hd8ed1ab_3
   - pycosat=0.6.6=py312h5eee18b_1
   - pycparser=2.22=pyhd8ed1ab_0
+  - pyg=2.6.1=py312_torch_2.4.0_cpu
+  - pyparsing=3.1.2=py312h06a4308_0
   - pysocks=1.7.1=pyha2e5f31_6
   - python=3.12.4=h5148396_1
   - python-dateutil=2.9.0=pyhd8ed1ab_0
@@ -156,8 +167,8 @@ dependencies:
   - xz=5.4.6=h5eee18b_1
   - yaml=0.2.5=h7f98852_2
   - yaml-cpp=0.8.0=h59595ed_0
+  - yarl=1.11.0=py312h5eee18b_0
   - zlib=1.2.13=h5eee18b_1
   - zstandard=0.22.0=py312h2c38b39_0
   - zstd=1.5.5=hc292b87_2
 prefix: /opt/conda
-
